@@ -19,6 +19,7 @@ configurations {
     }
 }
 
+
 repositories {
     mavenCentral()
 }
@@ -27,20 +28,43 @@ dependencies {
     // MapStruct
     annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
     implementation("org.mapstruct:mapstruct:1.5.3.Final")
+
+    // Spring data
     implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-jdbc")
+
+    //Spring
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-validation")
-    implementation("org.liquibase:liquibase-core")
+
+    //Lombok
     compileOnly("org.projectlombok:lombok")
-    runtimeOnly("org.postgresql:postgresql")
     annotationProcessor("org.projectlombok:lombok")
+
+    //Database
+    implementation("org.liquibase:liquibase-core")
+    runtimeOnly("org.postgresql:postgresql")
+
+    // Тестирование
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("net.bytebuddy:byte-buddy-agent:1.15.11")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+
+    doFirst {
+        val agent = configurations.testRuntimeClasspath.get()
+            .find { it.name.contains("byte-buddy-agent") }
+        if (agent != null) {
+            jvmArgs("-javaagent:${agent.absolutePath}")
+        }
+    }
+
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
+
